# pagen

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
pagen/: __init__.py  _utils.py  models.py  parsing.py
pagen/_pagen/: __init__.py  character_containers.py  constants.py  expression_builders.py  expressions.py  grammar.py  grammar_builder.py  match.py  mismatch.py  parsing.py  rule.py
src/: lib.rs
src/python_binding/: mod.rs
tests/: strategies.py  test_parsing.py
