[package]
name = "pagen"
description = "Parser generator."
edition = "2021"
license = "MIT"
repository = "https://github.com/lycantropos/pagen"
rust-version = "1.71.0"
version = "0.0.0"

[lib]
name = "pagen"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.27.1"
features = ["extension-module"]
optional = true

[build-dependencies]
pyo3-build-config = "^0.27.1"

[features]
python_binding = ["dep:pyo3"]
